api config and login request

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>pacifico-site</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/lumen/bootstrap.min.css">
   </head>
   <body>
-    <div id="app">
+    <div id="app" class="container">
       <router-view></router-view>
+      <vue-progress-bar></vue-progress-bar>
     </div>
     <!-- built files will be auto injected -->
   </body>
