--- a/index.html
+++ b/index.html
@@ -25,8 +25,19 @@
            <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                  <li><router-link to="/">Dashboard</router-link></li>
-                 <li><router-link to="/catalogs">Catalogs</router-link></li>
-                 <li><router-link to="/newUser">New User</router-link></li>
+                 <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <span>Catalogs</span>
+                    <span class="caret"></span>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><router-link to="/GetTrophies">Trophies</router-link></li>
+                    <li><router-link to="/GetMedals">Medals</router-link></li>
+                    <li><router-link to="/AddTrophy">Add Trophy</router-link></li>
+                    <li><router-link to="/AddMedal">Add Medal</router-link></li>
+                  </ul>
+                </li>
+                 <li><router-link to="/newUser">Create New User</router-link></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
@@ -44,7 +55,7 @@
         </div>
       </nav>
 
-      <div class="container">
+      <div class="container" style="margin-top:50px">
         <router-view transition="fade"></router-view>
         <vue-progress-bar></vue-progress-bar>
       </div>
