--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span class="caret"></span>
                   </a>
                   <ul class="dropdown-menu">
-                    <li><router-link to="/GetTrophies">Trophies</router-link></li>
+                    <li><router-link to="/TrophyList">Trophies</router-link></li>
                     <li><router-link to="/GetMedals">Medals</router-link></li>
                     <li><router-link to="/AddTrophy">Add Trophy</router-link></li>
                     <li><router-link to="/AddMedal">Add Medal</router-link></li>
