--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li><router-link to="/TrophyList">Trophies</router-link></li>
-                    <li><router-link to="/GetMedals">Medals</router-link></li>
+                    <li><router-link to="/MedalList">Medals</router-link></li>
                     <li><router-link to="/AddTrophy">Add Trophy</router-link></li>
                     <li><router-link to="/AddMedal">Add Medal</router-link></li>
                   </ul>
