--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                   <ul class="dropdown-menu">
                     <li><router-link to="/TrophyList">Trophies</router-link></li>
                     <li><router-link to="/MedalList">Medals</router-link></li>
+                    <li role="separator" class="divider"></li>
                     <li><router-link to="/AddTrophy">Add Trophy</router-link></li>
                     <li><router-link to="/AddMedal">Add Medal</router-link></li>
                   </ul>
