--- a/index.html
+++ b/index.html
@@ -37,7 +37,17 @@
                     <li><router-link to="/AddMedal">Add Medal</router-link></li>
                   </ul>
                 </li>
-                 <li><router-link to="/newUser">Create New User</router-link></li>
+                <li class="dropdown">
+                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                   <span>Actions</span>
+                   <span class="caret"></span>
+                 </a>
+                 <ul class="dropdown-menu">
+                  <li><router-link to="/GiveTrophy">Give trophie</router-link></li>
+                  <li><router-link to="/GiveMedal">Give medal</router-link></li>
+                 </ul>
+               </li>
+               <li><router-link to="/newUser">Create New User</router-link></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
